@startuml

package "com.directi.training.lsp.exercise" {
    class Duck {
        + quack(): void
        + swim(): void
    }

    class ElectronicDuck {
        - _on: boolean
        + turnOn(): void
        + turnOff(): void
        + quack(): void
        + swim(): void
    }

    class Pool {
        + run(): void
        - quack(ducks: Duck...): void
        - swim(ducks: Duck...): void
        + main(args: String[]): void
    }
}

Duck <|-- ElectronicDuck

Pool *-- Duck

@enduml
